[package]
edition = "2021"
name = "deltafy_logos-dev-cli-utils"
version = "0.4.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2.12.2"
redis = { version = "0.26.0", features = ["aio", "tokio-comp"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "=1.0.1"
tokio = { version = "1.39.2", features = ["full"] }
tokio-postgres = "0.7.10"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
